--- a/src/content/technotes/TN0039-debugging-subgraph-requests.mdx
+++ b/src/content/technotes/TN0039-debugging-subgraph-requests.mdx
@@ -1,26 +1,32 @@
 ---
-title: Debugging subgraph requests from Apollo Router or Gateway
+title: Debugging subgraph requests from Apollo Router or @apollo/gateway
 id: TN0039
 tags: [federation, gateway, router]
 ---
 
-Both the [Apollo Router](/router) and [Apollo Gateway](/apollo-server/using-federation/apollo-gateway-setup) serve as an entrypoint into your [federated graph](/federation), and as your graph grows you may need to debug a problematic query for one reason or another. 
+As your graph grows, you may need to debug a problematic query for one reason or another. The [Apollo Router](/router) and [`@apollo/gateway`](/apollo-server/using-federation/api/apollo-gateway/) both serve as an entry point into your [federated graph](/federation) and offer ways to debug requests.
 
-Each client request goes through a process called [Query Planning](/graphos/explorer/additional-features/#query-plans-for-supergraphs) which generates the subgraph requests that will be executed. It's possible to log the out the query plan in both the Gateway and Router.
+Each client request goes through a process called [query planning](/graphos/explorer/additional-features/#query-plans-for-supergraphs) that generates the subgraph requests to execute. You can log out the query plan in both the router and gateway.
 
-## Outputting query plans with headers
+## Output query plans with headers
+
 With [the Apollo Router](/router/) `v0.16.0+` and [`@apollo/gateway`](/apollo-server/using-federation/api/apollo-gateway/) `v2.5.4+`, you can pass the following headers to return the query plans in the GraphQL response extensions:
 
-* Including the `Apollo-Query-Plan-Experimental` header returns the query plan in the response extensions
-* Additionally including the `Apollo-Query-Plan-Experimental-Format` header with one of the supported options changes the output format:
-  * A value of `prettified` returns a human-readable string  of the query plan
-  * A value of `internal` returns a JSON representation of the query plan
+- Including the `Apollo-Query-Plan-Experimental` header returns the query plan in the response extensions
+- Additionally, including the `Apollo-Query-Plan-Experimental-Format` header with one of the supported options changes the output format:
+  - A value of `prettified` returns a human-readable string of the query plan
+  - A value of `internal` returns a JSON representation of the query plan
 
 ## Log Apollo Router subgraph calls
 
-If instead you want to debug your subgraph HTTP requests in an Apollo Router instance, we'll leverage [Rhai](/router/customizations/rhai) to log the necessary information out. An example Rhai script is below. 
+If, instead, you want to debug your subgraph HTTP requests in an Apollo Router instance, you can use [Rhai scripts](/router/customizations/rhai) to log the necessary information out. An example Rhai script is shown below.
 
-**Note that while it is possible to log out the variables, Apollo strongly recommends not doing so to avoid leaking sensitive information into your logs.**
+<Note>
+
+While it's possible to log out the variables, Apollo strongly recommends not
+doing so to avoid leaking sensitive information into your logs.
+
+</Note>
 
 ```rhai
 fn subgraph_service(service, subgraph) {
@@ -30,40 +36,48 @@ fn subgraph_service(service, subgraph) {
 }
 ```
 
-The above uses an inline closure within the `map_request` function of the `subgraph_service` hook to log the subgraph-related information. 
+The above uses an inline closure within the `map_request` function of the `subgraph_service` hook to log the subgraph-related information.
 
-To enable query plans, you will need to run the Apollo Router with the `--dev` flag and leverage [Apollo Sandbox](https://studio.apollographql.com/sandbox) to [display your query plans](/graphos/explorer/additional-features/#query-plans-for-supergraphs). 
+To enable query plans, you must run the Apollo Router with the `--dev` flag and leverage [Apollo Sandbox](https://studio.apollographql.com/sandbox) to [display your query plans](/graphos/explorer/additional-features/#query-plans-for-supergraphs).
 
-As an alternative to using `--dev`, you can also enable query plans via the below configuration option, however we **strongly** discourage this as the feature may be removed or renamed at any time in the future.  
+As an alternative to using `--dev`, you can also enable query plans via the below configuration option, however, Apollo **strongly** discourages this as the feature may be removed or renamed in the future.
 
 ```yaml
 plugins:
   experimental.expose_query_plan: true
 ```
 
+## Log `@apollo/gateway` subgraph calls
 
-## Log Apollo Gateway subgraph calls
+To debug queries to your subgraphs within an `@apollo/gateway` instance, you can use a [`buildService` function](/apollo-server/using-federation/api/apollo-gateway/#configuring-the-subgraph-fetcher) to log the operation name and body.
 
-To debug queries to your subgraphs within an Apollo Gateway instance, we'll leverage a [`buildService` function](/apollo-server/using-federation/api/apollo-gateway/#configuring-the-subgraph-fetcher) to log the operation name and body. 
+<Note>
 
-**Note that while it is possible to log out the variables, Apollo strongly recommends not doing so to avoid leaking sensitive information into your logs.**
+While it's possible to log out the variables, Apollo strongly recommends not
+doing so to avoid leaking sensitive information into your logs.
+
+</Note>
 
 ```ts
 class DebugDataSource extends RemoteGraphQLDataSource {
-  willSendRequest({ request }: GraphQLDataSourceProcessOptions<Record<string, any>>): void | Promise<void> {
-      console.log(`Operation name: ${request.operationName}`);
-      console.log(`Query body: ${request.query}`);
+  willSendRequest({
+    request
+  }: GraphQLDataSourceProcessOptions<
+    Record<string, any>
+  >): void | Promise<void> {
+    console.log(`Operation name: ${request.operationName}`);
+    console.log(`Query body: ${request.query}`);
   }
 }
 const gateway = new ApolloGateway({
   debug: true,
   supergraphSdl,
-  buildService({ url }) {
-      return new DebugDataSource({ url })
-  },
+  buildService({url}) {
+    return new DebugDataSource({url});
+  }
 });
 ```
 
-The above snippet will create a new class called `DebugDataSource` to log out the operation name and body using the `willSendRequest` hook which is called prior to execution. 
+The above snippet creates a new class called `DebugDataSource` to log out the operation name and body using the `willSendRequest` hookwhich is called before execution.
 
-Lastly, it also enables the `debug` setting on the Gateway configuration to print out query plans in the logs for further debugging if needed.
+Lastly, it also enables the `debug` setting on the gateway configuration to print out query plans in the logs for further debugging if needed.
