--- a/src/content/technotes/TN0039-debugging-subgraph-requests.mdx
+++ b/src/content/technotes/TN0039-debugging-subgraph-requests.mdx
@@ -78,6 +78,6 @@ const gateway = new ApolloGateway({
 });
 ```
 
-The above snippet creates a new class called `DebugDataSource` to log out the operation name and body using the `willSendRequest` hookwhich is called before execution.
+The above snippet creates a new class called `DebugDataSource` to log out the operation name and body using the `willSendRequest` hook, which is called before execution.
 
 Lastly, it also enables the `debug` setting on the gateway configuration to print out query plans in the logs for further debugging if needed.
