--- a/src/content/technotes/TN0039-debugging-subgraph-requests.mdx
+++ b/src/content/technotes/TN0039-debugging-subgraph-requests.mdx
@@ -1,7 +1,7 @@
 ---
 title: Debugging subgraph requests from Apollo Router or @apollo/gateway
 id: TN0039
-tags: [federation, gateway, router]
+tags: [federation, gateway, router, subgraphs]
 ---
 
 As your graph grows, you may need to debug a problematic query for one reason or another. The [Apollo Router](/router) and [`@apollo/gateway`](/apollo-server/using-federation/api/apollo-gateway/) both serve as an entry point into your [federated graph](/federation) and offer ways to debug requests.
