--- a/src/content/graphos/enterprise/supergraph-architecture-framework.mdx
+++ b/src/content/graphos/enterprise/supergraph-architecture-framework.mdx
@@ -3,19 +3,20 @@ title: Supergraph Architecture Framework
 description: Learn about best practices and assess your graph's current state
 ---
 
-The Apollo Supergraph Architecture Framework (SAF) provides a collection of best practices in supergraph development. It serves as a roadmap for architecture and platform teams, guiding your organization toward an optimal supergraph implementation.
+The Apollo <TrackableLink   href="https://saf.apollographql.com/"
+  eventName="content_saf"> Supergraph Architecture Framework (SAF) </TrackableLink> provides a collection of best practices in supergraph development. These practices stem from Apollo's extensive experience collaborating with numerous engineering teams in building their supergraph implementations.
 
-The SAF includes an assessment to quantify your supergraph's current state and identify areas for improvement. Whether you're just starting with a supergraph or have been in production for years, you can use the SAF assessment to evaluate how well your API strategy aligns with Apollo's proven best practices. These practices stem from Apollo's extensive experience collaborating with numerous engineering teams in building their supergraph implementations.
+The SAF includes an assessment to quantify your supergraph's current state and identify areas for improvement. Whether you're just starting with a supergraph or have been in production for years, you can use the SAF assessment to evaluate how well your API strategy aligns with Apollo's proven best practices.
 
-Contact your Apollo customer success team to complete the SAF assessment. If you're just getting started with Apollo, don't hesitate to get in touch.
+The results of the SAF assessment serve as a roadmap for architecture and platform teams, guiding your organization toward an optimal supergraph implementation.
 
 <TrackableButton
   size="lg"
   colorScheme="indigo"
-  href="https://www.apollographql.com/contact-sales"
-  eventName="content_contact_sales"
+  href="https://saf.apollographql.com/"
+  eventName="content_saf"
 >
-  Get in touch
+  Go to the Supergraph Architecture Framework
 </TrackableButton>
 
 ## SAF Pillars
