Updated Tip wording per feedback

--- a/src/content/technotes/TN0046-managing-graph-environments-using-variants.mdx
+++ b/src/content/technotes/TN0046-managing-graph-environments-using-variants.mdx
@@ -27,7 +27,7 @@ flowchart LR
 
 <Tip>
 
-Reminder that the purpose of publishing your subgraph schemas to GraphOS is so they can be composed into a Supergraph which is consumed by the Router. The Router will be configured to consume a specific variant.
+The purpose of publishing your subgraph schemas to GraphOS is so that they can be composed into a Supergraph which is consumed by the Router. Each Router will be configured to consume a specific variant via a fixed graph reference. As a result, it's important that graph references/variant names are fixed, such as aligning them with each environment as demonstrated in this tech note.
 
 </Tip>
 
